# cloth-simulator

./: .gitignore  README.md
Coding/: CMakeLists.txt
Coding/include/: ball_renderer.hpp  camera.hpp  cloth.hpp  cloth_renderer.hpp  cloth_simulator.hpp  shader.hpp
Coding/res/shader/: ball.fs  cloth.fs
Coding/src/: ball_renderer.cpp  camera.cpp  cloth_simulator.cpp
Coding/test/: main.cpp
Report/: assignment.tex
